--- a/julia-output/adv-functions.ipynb
+++ b/julia-output/adv-functions.ipynb
@@ -419,13 +419,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "findMax (generic function with 2 methods)"
+       "findMax (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -446,27 +446,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "ename": "MethodError",
-     "evalue": "MethodError: no method matching findMax(::Vector{Int64})\nThe function `findMax` exists, but no method is defined for this combination of argument types.\n\nClosest candidates are:\n  findMax(!Matched::Real, !Matched::Real)\n   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X24sZmlsZQ==.jl:1\n  findMax(!Matched::Real...)\n   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X25sZmlsZQ==.jl:1\n",
+     "evalue": "MethodError: no method matching findMax(::Vector{Int64})\nThe function `findMax` exists, but no method is defined for this combination of argument types.\n\nClosest candidates are:\n  findMax(!Matched::Real...)\n   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X25sZmlsZQ==.jl:1\n",
      "output_type": "error",
      "traceback": [
       "MethodError: no method matching findMax(::Vector{Int64})\n",
       "The function `findMax` exists, but no method is defined for this combination of argument types.\n",
       "\n",
       "Closest candidates are:\n",
-      "  findMax(!Matched::Real, !Matched::Real)\n",
-      "   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X24sZmlsZQ==.jl:1\n",
       "  findMax(!Matched::Real...)\n",
       "   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X25sZmlsZQ==.jl:1\n",
       "\n",
       "\n",
       "Stacktrace:\n",
       " [1] top-level scope\n",
-      "   @ ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X52sZmlsZQ==.jl:1"
+      "   @ ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X26sZmlsZQ==.jl:1"
      ]
     }
    ],
@@ -476,13 +474,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "findMax (generic function with 3 methods)"
+       "findMax (generic function with 2 methods)"
       ]
      },
      "metadata": {},
@@ -860,7 +858,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0-rc3",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -868,7 +866,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0-rc3"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
