--- a/julia-output/regexp.ipynb
+++ b/julia-output/regexp.ipynb
@@ -87,6 +87,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element Vector{Bool}:\n",
+       " 1\n",
+       " 0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "map(s -> occursin(\"cat\", s), [\"scatter\", \"cottage\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Bool}:\n",
+       " 1\n",
+       " 0\n",
+       " 0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "map(s->startswith(s, \"cat\"), [\"catastrophe\", \"scatter\", \"tigercat\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Bool}:\n",
+       " 0\n",
+       " 0\n",
+       " 1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "map(s->endswith(s, \"cat\"), [\"catastrophe\", \"scatter\", \"tigercat\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -106,45 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "true"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "occursin(r\"^cat\", \"catalog\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "false"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "occursin(r\"cat$\", \"catalog\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +188,98 @@
     }
    ],
    "source": [
-    "map(s -> occursin(r\"c[auo]t\", s), [\"cat\", \"cot\", \"cut\"])"
+    "map(s-> occursin(r\"cat\", s), [\"catastrophe\", \"scatter\", \"tigercat\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Bool}:\n",
+       " 1\n",
+       " 0\n",
+       " 0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "map(s-> occursin(r\"^cat\", s), [\"catastrophe\", \"scatter\", \"tigercat\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4-element Vector{Bool}:\n",
+       " 1\n",
+       " 1\n",
+       " 1\n",
+       " 0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "map(s -> occursin(r\"c[auo]t\", s), [\"catalog\", \"scotch\", \"cutlery\", \"settle\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4-element Vector{Bool}:\n",
+       " 1\n",
+       " 1\n",
+       " 1\n",
+       " 0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "map(s -> occursin(r\"^[a-f]\",s), [\"apple\", \"checkmate\", \"frosted flakes\", \"zebra\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4-element Vector{Bool}:\n",
+       " 0\n",
+       " 0\n",
+       " 1\n",
+       " 1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "map(s -> occursin(r\"^[^a-f]\",s), [\"apple\", \"frosted flakes\", \"poutine\", \"zebra\"])"
    ]
   },
   {
@@ -172,7 +290,10 @@
     {
      "data": {
       "text/plain": [
-       "(true, true)"
+       "3-element Vector{Bool}:\n",
+       " 1\n",
+       " 0\n",
+       " 1"
       ]
      },
      "metadata": {},
@@ -180,18 +301,21 @@
     }
    ],
    "source": [
-    "occursin(r\"^[a-f]\",\"apple\"),occursin(r\"^[a-f]\",\"catalog\")"
+    "map(s -> occursin(r\"c.t\",s), [\"catalog\", \"tactile\", \"yacht\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(false, true)"
+       "3-element Vector{Bool}:\n",
+       " 1\n",
+       " 1\n",
+       " 0"
       ]
      },
      "metadata": {},
@@ -199,19 +323,21 @@
     }
    ],
    "source": [
-    "occursin(r\"^[^a-f]\",\"apple\"),\n",
-    "occursin(r\"^[^a-f]\",\"zebra\")"
+    "map(s -> occursin(r\"dog|cat\",s), [\"dogma\", \"catalog\", \"fish\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(true, true, false)"
+       "3-element Vector{Bool}:\n",
+       " 1\n",
+       " 1\n",
+       " 0"
       ]
      },
      "metadata": {},
@@ -219,9 +345,7 @@
     }
    ],
    "source": [
-    "occursin(r\"c.t\",\"catalog\"),\n",
-    "occursin(r\"c.t\",\"yacht\"),\n",
-    "occursin(r\"c.t\",\"tact\")"
+    "map(s -> occursin(r\"(dog|cat)fish\",s), [\"dogfish\", \"catfish\", \"clownfish\"])"
    ]
   },
   {
@@ -379,6 +503,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Quantifiers\n",
+    "\n",
+    "We often want to match some character (or range) some number of times.  We can do that by just repeating that character, like: "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -398,6 +531,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Or we can use the `{n}` after a character to match `n` times.  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -414,6 +554,13 @@
    ],
    "source": [
     "occursin(r\"c{3}\",\"cc\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following matches `c` between 2 and 4 times. "
    ]
   },
   {
@@ -466,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -486,6 +633,13 @@
    ],
    "source": [
     "map(s -> occursin(r\"^c{0,3}$\",s),[\"c\",\"cc\",\"ccc\",\"cccc\",\"ccccc\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can match a character 0 or more times with a `*`."
    ]
   },
   {
@@ -513,6 +667,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can match a character 1 or more times with a `+`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -534,6 +695,171 @@
    ],
    "source": [
     "map(s -> occursin(r\"^c+a\",s),[\"a\",\"ca\",\"cca\",\"ccca\",\"cccca\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parsing strings and extracting substrings\n",
+    "\n",
+    "A bigger use of regular expressions is for extracting substrings and parsing those substrings.  We first examine the `match` method to extract information. \n",
+    "\n",
+    "If we want to match a string with 3 words separated by spaces, we can use the regular expression `r\"\\w+\\s+\\w+\\s+\\w+\"` for example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "occursin(r\"\\w+\\s+\\w+\\s+\\w+\", \"Three big pigs\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now this just tells us if the string matches.  However lets say that we want to extract the three strings. We can do that first of all by surrounding the `\\w+` with `()`, which makes a grouping.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "occursin(r\"(\\w+)\\s+(\\w+)\\s+(\\w+)\", \"Three big pigs\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And now we will use `match` instead of `occursin`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RegexMatch(\"Three big pigs\", 1=\"Three\", 2=\"big\", 3=\"pigs\")"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "m = match(r\"(\\w+)\\s+(\\w+)\\s+(\\w+)\", \"Three big pigs\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This returns a `RegexMatch` object, which returns the matched string (the whole thing) and the three groupings.  We can next get the groups with `m[1]`, `m[2]` and `m[3]`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(\"Three\", \"big\", \"pigs\")"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "m[1], m[2], m[3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise\n",
+    "\n",
+    "Let's say there are sports scores like `78-75` or `5-3` where the first number is the home team, the second is the visitor team.  Extract the scores.  Test with a few options. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Bool}:\n",
+       " 1\n",
+       " 1\n",
+       " 1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "map(s -> occursin(r\"^\\d+-\\d+$\", s), [\"78-75\",\"5-3\", \"123-97\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RegexMatch(\"78-75\", 1=\"78\", 2=\"75\")"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "match(r\"^(\\d+)-(\\d+)$\", \"78-75\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Decimals and Integers"
    ]
   },
   {
@@ -579,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -700,6 +1026,13 @@
    "source": [
     "occursin(pt_re,\"(14,-17)\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1529,7 +1862,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0-rc3",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -1537,7 +1870,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0-rc3"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
