--- a/julia-output/arrays.ipynb
+++ b/julia-output/arrays.ipynb
@@ -994,6 +994,356 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4-element Vector{Int64}:\n",
+       " 5\n",
+       " 6\n",
+       " 7\n",
+       " 8"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x = [1, 2, 3, 4]\n",
+    "y = [5, 6, 7, 8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8-element Vector{Int64}:\n",
+       " 1\n",
+       " 2\n",
+       " 3\n",
+       " 4\n",
+       " 5\n",
+       " 6\n",
+       " 7\n",
+       " 8"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "vcat(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×2 Matrix{Int64}:\n",
+       " 1  5\n",
+       " 2  6\n",
+       " 3  7\n",
+       " 4  8"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "hcat(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×4 Matrix{Int64}:\n",
+       " 1  2   3   4\n",
+       " 2  4   6   8\n",
+       " 3  6   9  12\n",
+       " 4  8  12  16"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "A = [i*j for i=1:4,j=1:4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×2 Matrix{Int64}:\n",
+       "  1  -1\n",
+       " -1   1\n",
+       "  1  -1\n",
+       " -1   1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "B = [(-1)^(i+j) for i=1:4,j=1:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×6 Matrix{Int64}:\n",
+       " 1  2   3   4   1  -1\n",
+       " 2  4   6   8  -1   1\n",
+       " 3  6   9  12   1  -1\n",
+       " 4  8  12  16  -1   1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "hcat(A,B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×7 Matrix{Int64}:\n",
+       " 1  2   3   4   1  -1  1\n",
+       " 2  4   6   8  -1   1  2\n",
+       " 3  6   9  12   1  -1  3\n",
+       " 4  8  12  16  -1   1  4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "hcat(A,B,x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5×4 Matrix{Int64}:\n",
+       " 1  2   3   4\n",
+       " 2  4   6   8\n",
+       " 3  6   9  12\n",
+       " 4  8  12  16\n",
+       " 1  2   3   4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "vcat(A,transpose(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8-element Vector{Int64}:\n",
+       " 1\n",
+       " 2\n",
+       " 1\n",
+       " 2\n",
+       " 1\n",
+       " 2\n",
+       " 1\n",
+       " 2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "[1+(i+1)%2 for i=1:8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8-element Vector{Int64}:\n",
+       " 1\n",
+       " 1\n",
+       " 1\n",
+       " 1\n",
+       " 2\n",
+       " 2\n",
+       " 2\n",
+       " 2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "[1+ (i-1) ÷ 4 for i=1:8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8-element Vector{Int64}:\n",
+       " 1\n",
+       " 2\n",
+       " 3\n",
+       " 4\n",
+       " 1\n",
+       " 2\n",
+       " 3\n",
+       " 4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "[1+i % 4 for i=0:7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8-element Vector{Int64}:\n",
+       " 1\n",
+       " 2\n",
+       " 1\n",
+       " 2\n",
+       " 1\n",
+       " 2\n",
+       " 1\n",
+       " 2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "repeat(1:2,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8-element Vector{Int64}:\n",
+       " 1\n",
+       " 1\n",
+       " 1\n",
+       " 1\n",
+       " 2\n",
+       " 2\n",
+       " 2\n",
+       " 2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "repeat(1:2, inner = 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6×3 Matrix{Int64}:\n",
+       " 1  1  1\n",
+       " 2  2  2\n",
+       " 3  3  3\n",
+       " 1  1  1\n",
+       " 2  2  2\n",
+       " 3  3  3"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "repeat([1, 2, 3], 2, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1002,7 +1352,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0-rc3",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -1010,7 +1360,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0-rc3"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
