--- a/julia-output/intro-data-analysis.ipynb
+++ b/julia-output/intro-data-analysis.ipynb
@@ -2291,7 +2291,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0-rc1",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -2299,7 +2299,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0-rc1"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
