Update census chapter

--- a/julia-output/olympics.ipynb
+++ b/julia-output/olympics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -16,13 +16,13 @@
     }
    ],
    "source": [
-    "using DataFrames, Chain, Statistics, CSV, StatsPlots, StatsBase\n",
+    "using DataFrames, Chain, Statistics, CSV, StatsBase\n",
     "ENV[\"DATAFRAMES_ROWS\"]= 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0-rc1",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -861,7 +861,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0-rc1"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
