update olympics chapter

--- a/julia-output/olympics.ipynb
+++ b/julia-output/olympics.ipynb
@@ -127,7 +127,69 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Collectively taking each summer Olympics, give the top 10 athletes by number of medals."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><div style = \"float: left;\"><span>10×3 DataFrame</span></div><div style = \"clear: both;\"></div></div><div class = \"data-frame\" style = \"overflow-x: scroll;\"><table class = \"data-frame\" style = \"margin-bottom: 6px;\"><thead><tr class = \"header\"><th class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">Row</th><th style = \"text-align: left;\">ID</th><th style = \"text-align: left;\">Name</th><th style = \"text-align: left;\">nrow</th></tr><tr class = \"subheader headerLastRow\"><th class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\"></th><th title = \"Int64\" style = \"text-align: left;\">Int64</th><th title = \"String\" style = \"text-align: left;\">String</th><th title = \"Int64\" style = \"text-align: left;\">Int64</th></tr></thead><tbody><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">1</td><td style = \"text-align: right;\">94406</td><td style = \"text-align: left;\">Michael Fred Phelps, II</td><td style = \"text-align: right;\">23</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">2</td><td style = \"text-align: right;\">33557</td><td style = \"text-align: left;\">Raymond Clarence &quot;Ray&quot; Ewry</td><td style = \"text-align: right;\">10</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">3</td><td style = \"text-align: right;\">67046</td><td style = \"text-align: left;\">Larysa Semenivna Latynina (Diriy-)</td><td style = \"text-align: right;\">9</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">4</td><td style = \"text-align: right;\">69210</td><td style = \"text-align: left;\">Frederick Carlton &quot;Carl&quot; Lewis</td><td style = \"text-align: right;\">9</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">5</td><td style = \"text-align: right;\">87390</td><td style = \"text-align: left;\">Paavo Johannes Nurmi</td><td style = \"text-align: right;\">9</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">6</td><td style = \"text-align: right;\">113912</td><td style = \"text-align: left;\">Mark Andrew Spitz</td><td style = \"text-align: right;\">9</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">7</td><td style = \"text-align: right;\">11642</td><td style = \"text-align: left;\">Matthew Nicholas &quot;Matt&quot; Biondi</td><td style = \"text-align: right;\">8</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">8</td><td style = \"text-align: right;\">13029</td><td style = \"text-align: left;\">Usain St. Leo Bolt</td><td style = \"text-align: right;\">8</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">9</td><td style = \"text-align: right;\">35550</td><td style = \"text-align: left;\">Birgit Fischer-Schmidt</td><td style = \"text-align: right;\">8</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">10</td><td style = \"text-align: right;\">57998</td><td style = \"text-align: left;\">Sawao Kato</td><td style = \"text-align: right;\">8</td></tr></tbody></table></div>"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|ccc}\n",
+       "\t& ID & Name & nrow\\\\\n",
+       "\t\\hline\n",
+       "\t& Int64 & String & Int64\\\\\n",
+       "\t\\hline\n",
+       "\t1 & 94406 & Michael Fred Phelps, II & 23 \\\\\n",
+       "\t2 & 33557 & Raymond Clarence \"Ray\" Ewry & 10 \\\\\n",
+       "\t3 & 67046 & Larysa Semenivna Latynina (Diriy-) & 9 \\\\\n",
+       "\t4 & 69210 & Frederick Carlton \"Carl\" Lewis & 9 \\\\\n",
+       "\t5 & 87390 & Paavo Johannes Nurmi & 9 \\\\\n",
+       "\t6 & 113912 & Mark Andrew Spitz & 9 \\\\\n",
+       "\t7 & 11642 & Matthew Nicholas \"Matt\" Biondi & 8 \\\\\n",
+       "\t8 & 13029 & Usain St. Leo Bolt & 8 \\\\\n",
+       "\t9 & 35550 & Birgit Fischer-Schmidt & 8 \\\\\n",
+       "\t10 & 57998 & Sawao Kato & 8 \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/plain": [
+       "\u001b[1m10×3 DataFrame\u001b[0m\n",
+       "\u001b[1m Row \u001b[0m│\u001b[1m ID     \u001b[0m\u001b[1m Name                              \u001b[0m\u001b[1m nrow  \u001b[0m\n",
+       "     │\u001b[90m Int64  \u001b[0m\u001b[90m String                            \u001b[0m\u001b[90m Int64 \u001b[0m\n",
+       "─────┼──────────────────────────────────────────────────\n",
+       "   1 │  94406  Michael Fred Phelps, II               23\n",
+       "   2 │  33557  Raymond Clarence \"Ray\" Ewry           10\n",
+       "   3 │  67046  Larysa Semenivna Latynina (Diriy…      9\n",
+       "   4 │  69210  Frederick Carlton \"Carl\" Lewis         9\n",
+       "   5 │  87390  Paavo Johannes Nurmi                   9\n",
+       "   6 │ 113912  Mark Andrew Spitz                      9\n",
+       "   7 │  11642  Matthew Nicholas \"Matt\" Biondi         8\n",
+       "   8 │  13029  Usain St. Leo Bolt                     8\n",
+       "   9 │  35550  Birgit Fischer-Schmidt                 8\n",
+       "  10 │  57998  Sawao Kato                             8"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@chain olympics begin\n",
+    "  dropmissing(:Medal)\n",
+    "  subset([:Season, :Medal] => (s, m)  -> s .== \"Summer\" .&& m .== \"Gold\")\n",
+    "  groupby(:ID)\n",
+    "  combine(:Name => first => :Name, nrow)\n",
+    "  sort(:nrow, rev = true)\n",
+    "  first(10)\n",
+    "end"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -138,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +252,7 @@
     "  dropmissing(:Medal)\n",
     "  subset([:Games, :Medal] => (g, m)  -> g .== \"2000 Summer\" .&& m .== \"Gold\")\n",
     "  groupby(:ID)\n",
-    "  combine(:Name =>  (names -> first(names)) => :Name, nrow)\n",
+    "  combine(:Name => first => :Name, nrow)\n",
     "  sort(:nrow, rev = true)\n",
     "  first(10)\n",
     "end"
