--- a/julia-output/intro-functions.ipynb
+++ b/julia-output/intro-functions.ipynb
@@ -700,7 +700,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0-rc2",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -708,7 +708,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0-rc2"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
