--- a/julia-output/rootfinding.ipynb
+++ b/julia-output/rootfinding.ipynb
@@ -639,7 +639,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0-rc3",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -647,7 +647,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0-rc3"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
