changes to data chapters

--- a/julia-output/adv-lin-alg.ipynb
+++ b/julia-output/adv-lin-alg.ipynb
@@ -115,18 +115,11 @@
    "source": [
     "sizeof(SA)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0-rc1",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -134,7 +127,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0-rc1"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
