--- a/julia-output/poker.ipynb
+++ b/julia-output/poker.ipynb
@@ -346,11 +346,168 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Main.PlayingCards"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "include(\"PlayingCards.jl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using Combinatorics, .PlayingCards"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,5♠]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,6♠]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,7♠]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,8♠]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,9♠]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,T♠]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,J♠]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,Q♠]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,K♠]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,A♡]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,2♡]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,3♡]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,4♡]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,5♡]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,6♡]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,7♡]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,8♡]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,9♡]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,T♡]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,J♡]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,Q♡]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,K♡]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,A♢]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,2♢]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,3♢]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,4♢]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,5♢]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,6♢]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,7♢]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,8♢]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,9♢]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,T♢]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,J♢]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,Q♢]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,K♢]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,A♣]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,2♣]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,3♣]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,4♣]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,5♣]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,6♣]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,7♣]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,8♣]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,9♣]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,T♣]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,J♣]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,Q♣]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,4♠,K♣]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,6♠]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,7♠]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,8♠]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,9♠]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,T♠]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,J♠]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,Q♠]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,K♠]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,A♡]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,2♡]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,3♡]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,4♡]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,5♡]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,6♡]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,7♡]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,8♡]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,9♡]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,T♡]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,J♡]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,Q♡]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,K♡]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,A♢]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,2♢]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,3♢]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,4♢]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,5♢]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,6♢]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,7♢]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,8♢]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,9♢]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,T♢]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,J♢]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,Q♢]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,K♢]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,A♣]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,2♣]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,3♣]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,4♣]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,5♣]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,6♣]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,7♣]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,8♣]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,9♣]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,T♣]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,J♣]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,Q♣]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,5♠,K♣]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,6♠,7♠]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,6♠,8♠]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,6♠,9♠]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,6♠,T♠]\n",
+      "Hand([Card(c) for c = comb]) = [A♠,2♠,3♠,6♠,J♠]\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "for comb in combinations(1:52, 5)\n",
+    "  @show Hand([Card(c) for c in comb])\n",
+    "\n",
+    "  count += 1\n",
+    "  count >= 100 && break\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0-rc1",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -358,7 +515,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0-rc1"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
